--- a/crontrib/example-external-secret.yaml
+++ b/crontrib/example-external-secret.yaml
@@ -28,6 +28,7 @@ spec:
         bucket-name: "my-app-backups"
         access-key: "myapp"
         access-secret: "{{ .password }}"
+        endpoint-url: "http://versitygw.versitygw.svc.cluster.local:7070"
         role: "user"
         user-id: "1001"
         group-id: "1001"
