--- a/crontrib/example-secret.yaml
+++ b/crontrib/example-secret.yaml
@@ -11,6 +11,7 @@ stringData:
   bucket-name: "my-app-backups"
   access-key: "my-app-user"
   access-secret: "a-very-strong-and-long-password"
+  endpoint-url: "http://versitygw.versitygw.svc.cluster.local:7070"
 
   # Optional fields
   role: "user"
