--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -83,7 +83,8 @@ affinity: {}
 
 operator:
   # Annotation key for secrets to be processed by the operator
-  annotation_key: "s3-resource-operator/enabled"
+  # -- The annotation key to look for on secrets.
+  annotation_key: "s3-resource-operator.io/enabled"
   # S3 backend to use
   backend_name: "versitygw"
 
@@ -97,8 +98,20 @@ operator:
     # If 'create' is true and name is empty, a name will be generated.
     name: ""
     # Values for the new secret (if create is true)
+    endpointUrl: ""
+    accessKey: ""
+    secretKey: ""
     # The keys must be S3_ENDPOINT_URL, S3_ACCESS_KEY, and S3_SECRET_KEY
     data: {}
     #  S3_ENDPOINT_URL: ""
     #  S3_ACCESS_KEY: ""
     #  S3_SECRET_KEY: ""
+
+metrics:
+  service:
+    enabled: true
+    port: 8000
+    annotations:
+      prometheus.io/scrape: "true"
+      prometheus.io/path: "/metrics"
+      prometheus.io/port: "8000"
