--- a/crontrib/example-external-secret.yaml
+++ b/crontrib/example-external-secret.yaml
@@ -23,7 +23,7 @@ spec:
     template:
       metadata:
         annotations:
-          s3-operator.io/enabled: "true"
+          s3-resource-operator.io/enabled: "true"
       data:
         bucket-name: "my-app-backups"
         access-key: "myapp"
