--- a/crontrib/example-secret.yaml
+++ b/crontrib/example-secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-app-s3-credentials
   namespace: my-app
   annotations:
-    s3-operator.io/enabled: "true"
+    s3-resource-operator.io/enabled: "true"
 type: Opaque
 stringData:
   # Required fields
