--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: s3-resource-operator
-description: A Helm chart for the VersityGW Operator
+description: A Helm chart for the S3 Resource Operator - Kubernetes operator for managing S3 buckets and IAM users
 type: application
 version: 0.1.0
 appVersion: "0.1.0"
