--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -68,13 +68,6 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
-autoscaling:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
-
 nodeSelector: {}
 
 tolerations: []
@@ -97,21 +90,39 @@ operator:
     # the keys S3_ENDPOINT_URL, S3_ACCESS_KEY, and S3_SECRET_KEY.
     # If 'create' is true and name is empty, a name will be generated.
     name: ""
-    # Values for the new secret (if create is true)
-    endpointUrl: ""
-    accessKey: ""
-    secretKey: ""
-    # The keys must be S3_ENDPOINT_URL, S3_ACCESS_KEY, and S3_SECRET_KEY
+    # Data for the new secret (if create is true).
+    # The keys must be S3_ENDPOINT_URL, S3_ACCESS_KEY, and S3_SECRET_KEY.
+    # Values will be base64-encoded automatically.
     data: {}
-    #  S3_ENDPOINT_URL: ""
-    #  S3_ACCESS_KEY: ""
-    #  S3_SECRET_KEY: ""
+    #  S3_ENDPOINT_URL: "http://versitygw.default.svc.cluster.local:7070"
+    #  S3_ACCESS_KEY: "admin"
+    #  S3_SECRET_KEY: "your-secret-key"
 
 metrics:
   service:
     enabled: true
     port: 8000
-    annotations:
-      prometheus.io/scrape: "true"
-      prometheus.io/path: "/metrics"
-      prometheus.io/port: "8000"
+    # Annotations for legacy Prometheus scraping (without Prometheus Operator)
+    # These are not needed if you're using ServiceMonitor (serviceMonitor.enabled=true)
+    annotations: {}
+      # prometheus.io/scrape: "true"
+      # prometheus.io/path: "/metrics"
+      # prometheus.io/port: "8000"
+
+# ServiceMonitor configuration for Prometheus Operator
+serviceMonitor:
+  # -- Enable ServiceMonitor for Prometheus Operator
+  enabled: false
+  # -- Additional labels for ServiceMonitor
+  additionalLabels: {}
+    # prometheus: kube-prometheus
+  # -- Additional annotations for ServiceMonitor
+  annotations: {}
+  # -- Interval at which metrics should be scraped
+  interval: 30s
+  # -- Timeout after which the scrape is ended
+  scrapeTimeout: 10s
+  # -- MetricRelabelConfigs to apply to samples before ingestion
+  metricRelabelings: []
+  # -- RelabelConfigs to apply to samples before scraping
+  relabelings: []
