--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,6 @@
 	"name": "Python 3",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/python:2-3.12-bullseye",
-
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	"features": {
 		"ghcr.io/devcontainers/features/kubectl-helm-minikube": {
@@ -14,26 +13,23 @@
 		},
 		"ghcr.io/devcontainers/features/aws-cli:1": {}
 	},
-
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
-
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pip3 install --user -r requirements.txt && git config commit.template .gitmessage",
-
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"ms-python.python"
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"vivaxy.vscode-conventional-commits"
 			]
 		}
 	},
-
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
-
 	"mounts": [
-    	"source=${localEnv:HOME}/.kube/config,target=/home/vscode/.kube/config,type=bind"
+		"source=${localEnv:HOME}/.kube/config,target=/home/vscode/.kube/config,type=bind"
 	]
 }
