fix: gitcommit msg

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip3 install --user -r requirements.txt && git config commit.template .gitmessage",
+	"postCreateCommand": "pip3 install --user -r requirements.txt && git config commit.template .gitmessage && git config format.signoff true",
 	// Configure tool-specific properties.
 	"customizations": {
 		"vscode": {
