--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,9 @@
 name: Release
 
 on:
-  workflow_run:
-    workflows: ["Test"]
+  push:
     branches:
       - main
-    types:
-      - completed
 
 permissions:
   contents: write
@@ -15,24 +12,51 @@ permissions:
   pull-requests: write
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-test.txt
+
+      - name: Run tests
+        run: |
+          pytest -v
+
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: 'v3.13.2'
+
+      - name: Test Helm chart
+        run: helm template ./helm --debug
+
+      - name: Build image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: false
+          load: true
+          tags: local/s3-resource-operator:latest
+
   release:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
+    needs: test
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: main
           fetch-depth: 0
-
-      - name: Debug branch info
-        run: |
-          echo "Current branch: $(git branch --show-current)"
-          echo "Current HEAD: $(git rev-parse HEAD)"
-          echo "GITHUB_REF: $GITHUB_REF"
-          echo "GITHUB_HEAD_REF: $GITHUB_HEAD_REF"
-          echo "GITHUB_BASE_REF: $GITHUB_BASE_REF"
-          echo "workflow_run.head_branch: ${{ github.event.workflow_run.head_branch }}"
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -48,13 +72,4 @@ jobs:
       - name: Run semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REF: refs/heads/main
-          GITHUB_HEAD_REF: ""
-        run: |
-          # Ensure we're on main branch for semantic-release
-          git checkout main
-          # Set the branch explicitly for semantic-release
-          export BRANCH_NAME=main
-          echo "Running semantic-release on branch: $(git branch --show-current)"
-          echo "GITHUB_REF is now: $GITHUB_REF"
-          npx semantic-release
+        run: npx semantic-release
