fix: improve publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,13 @@ name: Build and Publish
 
 on:
   release:
-    types: [published]
+    types: [published, created]
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to publish (e.g., v1.0.1)'
+        required: true
+        type: string
 
 permissions:
   contents: write # Needed for creating releases and tags
@@ -12,11 +18,24 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     steps:
+      - name: Determine tag
+        id: tag
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            echo "tag=${{ inputs.tag }}" >> $GITHUB_OUTPUT
+          else
+            echo "tag=${{ github.event.release.tag_name }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ steps.tag.outputs.tag }}
 
       - name: Debug release info
         run: |
+          echo "Event: ${{ github.event_name }}"
+          echo "Tag: ${{ steps.tag.outputs.tag }}"
           echo "Release tag: ${{ github.event.release.tag_name }}"
           echo "Release name: ${{ github.event.release.name }}"
           echo "Release ref: ${{ github.ref }}"
