--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -30,6 +30,7 @@
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
 	"mounts": [
-		"source=${localEnv:HOME}/.kube/config,target=/home/vscode/.kube/config,type=bind"
+		"source=${localEnv:HOME}/.kube/config,target=/home/vscode/.kube/config,type=bind",
+		"source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
 	]
 }
