--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
           - runner: ubuntu-24.04
             platform: linux/amd64
             arch: amd64
-          - runner: ubuntu-24.04-arm64
+          - runner: ubuntu-24.04
             platform: linux/arm64
             arch: arm64
     runs-on: ${{ matrix.runner }}
