--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,8 +1,7 @@
-pytest
-pytest-cov
-moto
-mock
-kubernetes
-pytest-mock
-requests
+pytest==8.4.2
+pytest-cov==7.0.0
+pytest-mock==3.15.1
+moto==5.1.16
+mock==5.2.0
+
 
