--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,41 +14,7 @@ permissions:
 
 jobs:
   test:
-    runs-on: ubuntu-24.04
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-test.txt
-
-      - name: Run tests
-        run: |
-          pytest -v
-
-      - name: Set up Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: 'v3.13.2'
-
-      - name: Test Helm chart
-        run: helm template ./helm --debug
-
-      - name: Build image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          load: true
-          tags: local/s3-resource-operator:latest
+    uses: ./.github/workflows/test.yml
 
   release:
     runs-on: ubuntu-24.04
@@ -91,20 +57,6 @@ jobs:
 
       - name: Trigger publish workflow
         if: steps.semantic-release.outputs.release_created == 'true'
-        uses: actions/github-script@v7
+        uses: ./.github/workflows/publish.yml
         with:
-          script: |
-            const version = '${{ steps.semantic-release.outputs.version }}';
-            console.log(`Triggering publish workflow for ${version}`);
-
-            await github.rest.actions.createWorkflowDispatch({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              workflow_id: 'publish.yml',
-              ref: 'main',
-              inputs: {
-                tag: version
-              }
-            });
-
-            console.log('✅ Publish workflow triggered successfully');
+          tag: ${{ steps.semantic-release.outputs.version }}
