--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-kubernetes
-boto3
-requests
-botocore
-prometheus-client
-python-dotenv
+kubernetes==34.1.0
+boto3==1.40.64
+botocore==1.40.64
+requests==2.32.5
+prometheus-client==0.23.1
+python-dotenv==1.2.1
