feat: improve logging

--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -1,4 +1,13 @@
 {{- if .Values.operator.secret.create -}}
+{{- if not .Values.operator.secret.data.S3_ENDPOINT_URL }}
+{{- fail "operator.secret.data.S3_ENDPOINT_URL must be provided when operator.secret.create is true" }}
+{{- end }}
+{{- if not .Values.operator.secret.data.S3_ACCESS_KEY }}
+{{- fail "operator.secret.data.S3_ACCESS_KEY must be provided when operator.secret.create is true" }}
+{{- end }}
+{{- if not .Values.operator.secret.data.S3_SECRET_KEY }}
+{{- fail "operator.secret.data.S3_SECRET_KEY must be provided when operator.secret.create is true" }}
+{{- end }}
 apiVersion: v1
 kind: Secret
 metadata:
