--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -52,6 +52,8 @@ spec:
             timeoutSeconds: 3
             failureThreshold: 3
           env:
+            - name: LOG_LEVEL
+              value: {{ .Values.operator.logLevel | quote }}
             - name: ANNOTATION_KEY
               value: {{ .Values.operator.annotation_key }}
             - name: BACKEND_NAME
