--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -2,11 +2,11 @@
 {{- if not .Values.operator.secret.data.S3_ENDPOINT_URL }}
 {{- fail "operator.secret.data.S3_ENDPOINT_URL must be provided when operator.secret.create is true" }}
 {{- end }}
-{{- if not .Values.operator.secret.data.S3_ACCESS_KEY }}
-{{- fail "operator.secret.data.S3_ACCESS_KEY must be provided when operator.secret.create is true" }}
+{{- if not .Values.operator.secret.data.ROOT_ACCESS_KEY }}
+{{- fail "operator.secret.data.ROOT_ACCESS_KEY must be provided when operator.secret.create is true" }}
 {{- end }}
-{{- if not .Values.operator.secret.data.S3_SECRET_KEY }}
-{{- fail "operator.secret.data.S3_SECRET_KEY must be provided when operator.secret.create is true" }}
+{{- if not .Values.operator.secret.data.ROOT_SECRET_KEY }}
+{{- fail "operator.secret.data.ROOT_SECRET_KEY must be provided when operator.secret.create is true" }}
 {{- end }}
 apiVersion: v1
 kind: Secret
