--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# Pin urllib3 to satisfy kubernetes dependency requirements
+# kubernetes 34.1.0 requires: urllib3<2.4.0,>=1.24.2
+urllib3<2.4.0,>=1.24.2
 kubernetes==34.1.0
 boto3==1.40.64
 botocore==1.40.64
