chore: update dev container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
 			"helm": "latest",
 			"minikube": "latest"
 		},
-		"ghcr.io/devcontainers/features/aws-cli:1": {}
+		// "ghcr.io/devcontainers/features/aws-cli:1": {}
 	},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
@@ -31,6 +31,7 @@
 	// "remoteUser": "root"
 	"mounts": [
 		"source=${localEnv:HOME}/.kube/config,target=/home/vscode/.kube/config,type=bind",
-		"source=${localEnv:HOME}/.ssh,target=/home/vscode/.ssh,type=bind,consistency=cached"
+		"source=${localEnv:HOME}/.kube/config,target=${localEnv:HOME}/.kube/config,type=bind",
+		"source=${localEnv:HOME}/.ssh,target=${localEnv:HOME}/.ssh,readonly,type=bind"
 	]
 }
