feat: allow additional AWS env names

--- a/contrib/example-external-secret.yaml
+++ b/contrib/example-external-secret.yaml
@@ -27,7 +27,7 @@ spec:
       data:
         bucket-name: "my-app-backups"
         access-key: "myapp"
-        access-secret: "{{ .password }}"
+        secret-key: "{{ .password }}"
         endpoint-url: "http://versitygw.versitygw.svc.cluster.local:7070"
         role: "user"
         user-id: "1001"
@@ -38,4 +38,4 @@ spec:
         apiVersion: generators.external-secrets.io/v1alpha1
         kind: Password
         name: "generated-s3-password"
-~                                      
+~
