--- a/contrib/example-secret.yaml
+++ b/contrib/example-secret.yaml
@@ -10,7 +10,7 @@ stringData:
   # Required fields
   bucket-name: "my-app-backups"
   access-key: "my-app-user"
-  access-secret: "a-very-strong-and-long-password"
+  secret-key: "a-very-strong-and-long-password"
   endpoint-url: "http://versitygw-longhorn.versitygw.svc.cluster.local:7070"
 
   # Optional fields
