--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -25,10 +25,14 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+
       - name: Sync main to develop
         run: |
           git checkout develop
+          git fetch origin main
           git merge origin/main --no-ff -m "chore: sync main to develop [skip ci]"
+          # Amend the merge commit with a Signed-off-by trailer so DCO checks pass
+          git commit --amend --no-edit --signoff --author="github-actions[bot] <github-actions[bot]@users.noreply.github.com>" || true
           git push origin develop
 
       - name: Sync summary
