--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "botocore",
     "prometheus-client",
     "python-dotenv",
+    "urllib3>=2.6.0,<3",
 ]
 
 [project.optional-dependencies]
